Added actual blog posts and link to dev.to profile

--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
             </p>
             <div class="blog--list my--1 flex flex-justify-between">
                 <!-- blog 1 -->
-                <div class="blog--page blog--card">
+                <div class="blog--page blog--card" id="blog_1">
                     <div class="project--info">
                         <h3 class="my--1 text--spacing">How to get started with Fetch()?</h3>
                         <small class="">19 December 2020</small>
@@ -89,7 +89,7 @@
                 </div>
 
                 <!-- blog 2 -->
-                <div class="blog--page blog--card">
+                <div class="blog--page blog--card" id="blog_2">
                     <div class="project--info">
                         <h3 class="my--1 text--spacing">How to keep your footer at bottom of the page?</h3>
                         <small class="">19 December 2020</small>
