--- a/index.html
+++ b/index.html
@@ -221,22 +221,25 @@
             </div>
         </div>
         <div class="blog--list my--1 flex flex-justify-between">
+
             <div class="blog--card">
                 <div class="project--info">
-                    <h3 class="my--1 text--spacing">How to create underline effect using css pseudo-elements like ::before and ::after?</h3>
+                    <h3 class="my--1 text--spacing">How to get started with Fetch()?</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
-                            CSS
+                            Javascript
                         </small>
                         <small class="project--tag">
-                            Psuedo elements
-                        </small>
-                        <small class="project--tag">
-                            Hover effects
+                            Fetch()
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
+                        The Fetch API provides an interface for fetching resources (including across the network). <br> 
+                        For making an request and fetching a response, you need to use the fetch() method that provides an easy, logical way to fetch resources asynchronously across the network.
+                        <br>
+                        <small class="">
+                            Example: I'll demonstrate a basic fetch request using a dummy API from Json Placeholder. This dummy API fetches a list of users with associated data.
+                        </small>
                     </div>
                     <div class="project--card--buttons">
                         <a href="/blog.html" class="btn--link btn--primary">
@@ -248,25 +251,30 @@
 
             <div class="blog--card">
                 <div class="project--info">
-                    <h3 class="my--1 text--spacing">Getting started with tailwindcss in your npm project.</h3>
+                    <h3 class="my--1 text--spacing">How to keep your footer at bottom of the page?</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
-                            TailwindCss
+                            flexbox
                         </small>
                         <small class="project--tag">
-                            SCSS
+                            css
+                        </small>
+                        <small class="project--tag">
+                            footer
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque, repudiandae aperiam. Minus assumenda modi aspernatur ducimus aperiam, cupiditate ratione vitae delectus! Odit, molestiae quam eum quia corrupti pariatur odio vel?
+                        Have you run into this problem where the footer on your site does not stay at the bottom of the page, even if it is the last tag in your html body. 
+                        Especially if you are new to web development, you'll run into this problem. There are ways of making sure your footer stays at bottom, but most of those methods have some kind of caveat.
                     </div>
                     <div class="project--card--buttons">
-                        <a href="/blog.html" class="btn--link btn--primary">
+                        <a href="/blog.html#blog_2" class="btn--link btn--primary">
                             <span class="fa fa-eye"></span>&nbsp; View blog
                         </a>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
