Added resume download option on homepage

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 <h2 class="intro-name text--spacing">I'm <span class="text--accent">Akshay Rajput</span></h2>
                 <p class="intro-role text--spacing">I'm a Frontend developer.</p>
                 <p class="intro-subrole text--gray text--spacing">I'm also into UI/UX.</p>
+                <div class="" style="margin-top: 25px;">
+                    <a href="img/resume.pdf" class="btn--resume">
+                        <span class="fa fa-download"></span>&nbsp; My Resume
+                    </a>
+                </div>
             </div>
             <div class="intro-image">
                 <!-- <img src="/img/code.svg" alt="" class=""> -->
@@ -97,6 +102,43 @@
 
             <div class="project--card">
                 <div class="project--image">
+                    <img src="/img/projects/vueshop2.jpg" alt="project image">
+                </div>
+                <div class="project--info">
+                    <h3 class="my--1">Ecommerce Store</h3>
+                    <div class="project--tags py--1 flex">
+                        <small class="project--tag">
+                            Vuejs
+                        </small>
+                        <small class="project--tag">
+                            TailwindCss
+                        </small>
+                        <small class="project--tag">
+                            Firebase DB
+                        </small>
+                        <small class="project--tag">
+                            JWT Auth
+                        </small>
+                    </div>
+                    <div class="project--desc py--1">
+                        Ecommerce-store made with Vuejs, Tailwindcss, Firebase's realtime database and uses JWT tokens for authentication. <br>
+                        It also uses Axios to fetch data from firebase, Vue-router for routing, Vuex for state management.
+                        It's deployed on Netlify.
+                    </div>
+                    <div class="project--card--buttons">
+                        <a href="https://vghostshop.netlify.app/" rel="noopener" class="btn--link btn--primary">
+                            <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                        </a>
+                        <a href="https://github.com/Root-0/vuestore" rel="noopener" class="mx--1 btn--link">
+                            <span class="fab fa-github"></span>&nbsp;
+                             View Source
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project--card">
+                <div class="project--image">
                     <img src="/img/projects/vue_md.png" alt="project screenshot">
                 </div>
                 <div class="project--info">
@@ -133,43 +175,6 @@
 
             <!-- <div class="project--card">
                 <div class="project--image">
-                    <img src="/img/projects/vueshop2.jpg" alt="project image">
-                </div>
-                <div class="project--info">
-                    <h3 class="my--1">Ecommerce Store</h3>
-                    <div class="project--tags py--1 flex">
-                        <small class="project--tag">
-                            Vuejs
-                        </small>
-                        <small class="project--tag">
-                            TailwindCss
-                        </small>
-                        <small class="project--tag">
-                            Firebase DB
-                        </small>
-                        <small class="project--tag">
-                            JWT Auth
-                        </small>
-                    </div>
-                    <div class="project--desc py--1">
-                        Ecommerce-store made with Vuejs, Tailwindcss, Firebase's realtime database and uses JWT tokens for authentication. <br>
-                        It also uses Axios to fetch data from firebase, Vue-router for routing, Vuex for state management.
-                        It's deployed on Netlify.
-                    </div>
-                    <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
-                            <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
-                        </a>
-                        <a href="" class="mx--1 btn--link">
-                            <span class="fab fa-github"></span>&nbsp;
-                             View Source
-                        </a>
-                    </div>
-                </div>
-            </div> -->
-
-            <div class="project--card">
-                <div class="project--image">
                     <img src="/img/projects/piratespeak.jpg" alt="project image">
                 </div>
                 <div class="project--info">
@@ -203,7 +208,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
