Add major project

--- a/projects.html
+++ b/projects.html
@@ -44,12 +44,13 @@
 
         <div class="project--list my--1 flex flex-justify-between">
 
-            <!-- <div class="project--card">
+            
+            <div class="featured project--card">
                 <div class="project--image">
                     <img src="/img/projects/vueshop2.jpg" alt="project image">
                 </div>
                 <div class="project--info">
-                    <h3 class="my--1">Ecommerce Store</h3>
+                    <h3 class="my--1">Ecommerce store</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
                             Vuejs
@@ -70,17 +71,17 @@
                         It's deployed on Netlify.
                     </div>
                     <div class="project--card--buttons">
-                        <a href="" class="btn--link btn--primary">
+                        <a href="https://vghostshop.netlify.app/" target="_blank" rel="noopener" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="" class="mx--1 btn--link">
+                        <a href="https://github.com/Root-0/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
                     </div>
                 </div>
-            </div> -->
-            
+            </div>
+
             <div class="featured project--card">
                 <div class="project--image">
                     <img src="/img/projects/vue_md.png" alt="project screenshot">
