--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                         It's deployed on Netlify.
                     </div>
                     <div class="project--card--buttons">
-                        <a href="https://vghostshop.netlify.app/" rel="noopener" class="btn--link btn--primary">
+                        <a href="https://vghostshop.netlify.app/" target="_blank" rel="noopener" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/vuestore" rel="noopener" class="mx--1 btn--link">
+                        <a href="https://github.com/Root-0/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
