--- a/projects.html
+++ b/projects.html
@@ -375,14 +375,14 @@
         <div class="container flex flex-justify-between flex-align-center">
             <div class="footer-credit my--1">
                 <div class="nav__brand my--1">
-                    <a href="/index.html" class="">Akshay</a>
+                    <a href="/" class="">Akshay</a>
                 </div>
             </div>
             <div class="footer-social my--1">
                 <small class="text--muted">Reach out</small>
                 <ul class="list--inline my--1">
                     <li class="">
-                        <a href="https://github.com/root-0" class="footer--link" title="My Github Profile">
+                        <a href="https://github.com/akshay-rajput" class="footer--link" title="My Github Profile">
                             <span class="fab fa-github"></span>
                         </a>
                     </li>
