Fix github links and add new project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <a href="https://vghostshop.netlify.app/" target="_blank" rel="noopener" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
+                        <a href="https://github.com/Akshay-Rajput/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
@@ -139,33 +139,34 @@
 
             <div class="project--card">
                 <div class="project--image">
-                    <img src="/img/projects/vue_md.png" alt="project screenshot">
+                    <img src="/img/projects/toprepos.png" alt="project screenshot">
                 </div>
                 <div class="project--info">
-                    <h3 class="my--1">Markdown Viewer</h3>
+                    <h3 class="my--1">TopRepos</h3>
                     <div class="project--tags py--1 flex">
                         <small class="project--tag">
                             Vuejs
                         </small>
                         <small class="project--tag">
-                            Inkline
+                            TailwindCss
                         </small>
                         <small class="project--tag">
-                            SCSS
+                            SPA
                         </small>
                         <small class="project--tag">
-                            Vue-markdown
+                            Github API
                         </small>
                     </div>
                     <div class="project--desc py--1">
-                        A web-app to preview your markdown files or markdown code. 
-                        You can upload a markdown file or just use online editor to write markdown and check its preview. <br>
+                        A project using Github API to display 30 most popular repositories of a selected topic. <br>
+                        You can change the display layout from cardview or listview. Also features theme change betweeen darkmode and lightmode.
+                        <br>It uses vue-router, vuex, axios, tailwind and hint.css library. It's deployed on Netlify.
                     </div>
                     <div class="project--card--buttons">
-                        <a href="https://vue-markdown-viewer.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                        <a href="https://frontend-repos.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/vue_md_previewer" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                        <a href="https://github.com/Akshay-Rajput/git_stars" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
@@ -202,7 +203,7 @@
                         <a href="https://piratespeak-neogcamp.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                        <a href="https://github.com/Akshay-Rajput/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
