--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="site-content container py--3">
-        <h2 class="section-heading my--1">My Projects</h2>
+        <h2 class="section-heading my--1">My Projects <span class="text--gray text--spacing-wide" style="font-size: 1.5rem;">(3)</span> </h2>
         <p class="text--muted">All of the projects that I've worked on.</p>
 
         <div class="project--list my--1 flex flex-justify-between">
@@ -74,7 +74,7 @@
                         <a href="https://vghostshop.netlify.app/" target="_blank" rel="noopener" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
+                        <a href="https://github.com/Akshay-Rajput/vuestore" target="_blank" rel="noopener" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
@@ -82,6 +82,44 @@
                 </div>
             </div>
 
+            <!-- TOPREPOS -->
+            <div class="featured project--card">
+                <div class="project--image">
+                    <img src="/img/projects/toprepos.png" alt="project image">
+                </div>
+                <div class="project--info">
+                    <h3 class="my--1">TopRepos</h3>
+                    <div class="project--tags py--1 flex">
+                        <small class="project--tag">
+                            Vuejs
+                        </small>
+                        <small class="project--tag">
+                            TailwindCss
+                        </small>
+                        <small class="project--tag">
+                            Github REST API
+                        </small>
+                        <small class="project--tag">
+                            SPA
+                        </small>
+                    </div>
+                    <div class="project--desc py--1">
+                        A project using <a href="https://docs.github.com/en/free-pro-team@latest/rest" target="_blank" rel="noopener">Github API</a> to display 30 most popular repositories of a selected topic.
+                        <br> It uses vue-router, vuex, axios, tailwind and hint.css library. It's deployed on Netlify.
+                    </div>
+                    <div class="project--card--buttons">
+                        <a href="https://frontend-repos.netlify.app" target="_blank" rel="noopener" class="btn--link btn--primary">
+                            <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
+                        </a>
+                        <a href="https://github.com/Akshay-Rajput/git_stars" target="_blank" rel="noopener" class="mx--1 btn--link">
+                            <span class="fab fa-github"></span>&nbsp;
+                             View Source
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- MARKDOWN PREVIEWER -->
             <div class="featured project--card">
                 <div class="project--image">
                     <img src="/img/projects/vue_md.png" alt="project screenshot">
@@ -110,7 +148,7 @@
                         <a href="https://vue-markdown-viewer.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                             <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                         </a>
-                        <a href="https://github.com/Root-0/vue_md_previewer" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                        <a href="https://github.com/Akshay-Rajput/vue_md_previewer" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                             <span class="fab fa-github"></span>&nbsp;
                              View Source
                         </a>
@@ -147,7 +185,7 @@
                             <a href="https://repl.it/@thecoon/lessonOneassignment0?embed=1&output=1" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_KnowMeQuiz" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_KnowMeQuiz" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -182,7 +220,7 @@
                             <a href="https://repl.it/@thecoon/lessonOneassignment1?embed=1&output=1" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_CLI_Riddler" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_CLI_Riddler" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -220,7 +258,7 @@
                             <a href="https://akshayr.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_Portfolio" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_Portfolio" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -253,7 +291,7 @@
                             <a href="https://translate2minion.netlify.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_lesson4_live" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_lesson4_live" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -286,7 +324,7 @@
                             <a href="https://piratespeak-neogcamp.netlify.app" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_PirateSpeak" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -320,7 +358,7 @@
                             <a href="https://yj13m.csb.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp_lesson5_emoji" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp_lesson5_emoji" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
@@ -354,7 +392,7 @@
                             <a href="https://p5598.csb.app/" target="_blank" rel="noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Live Project
                             </a>
-                            <a href="https://github.com/Root-0/NeogCamp-Recommender" target="_blank" rel="noreferrer" class="mx--1 btn--link">
+                            <a href="https://github.com/Akshay-Rajput/NeogCamp-Recommender" target="_blank" rel="noreferrer" class="mx--1 btn--link">
                                 <span class="fab fa-github"></span>&nbsp;
                                  View Source
                             </a>
