--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <p class="intro-role text--spacing">I'm a Frontend developer.</p>
                 <p class="intro-subrole text--gray text--spacing">I'm also into UI/UX.</p>
                 <div class="" style="margin-top: 25px;">
-                    <a href="img/resume.pdf" class="btn--resume">
+                    <!-- <a href="img/resume.pdf" class="btn--resume">
                         <span class="fa fa-download"></span>&nbsp; My Resume
-                    </a>
+                    </a> -->
                 </div>
             </div>
             <div class="intro-image">
