feat - blog - make links open in new tab

--- a/blog.html
+++ b/blog.html
@@ -43,13 +43,13 @@
             <div class="flex flex-align-center flex-justify-between">
                 <h2 class="section-heading my--1">My Blog</h2>
                 <div class="devto--link">
-                    <a href="https://dev.to/akshay_rajput" title="akshay_rajput's DEV Profile" class="btn--dev">
+                    <a href="https://dev.to/akshay_rajput" target="_blank" rel="noopener noreferrer" title="akshay_rajput's DEV Profile" class="btn--dev">
                         DEV
                     </a>
                 </div>
             </div>
             <p class="text--muted">My blog posts are targeted towards beginners in web development. You can also read all my blogs on 
-                <a href="https://dev.to/akshay_rajput" title="My Blogs on Dev.to" style="text-decoration: underline;">Dev.to</a> page.
+                <a href="https://dev.to/akshay_rajput" target="_blank" rel="noopener noreferrer" title="My Blogs on Dev.to" style="text-decoration: underline;">Dev.to</a> page.
             </p>
             <div class="blog--list my--1 flex flex-justify-between">
                 <!-- blog 1 -->
@@ -81,7 +81,7 @@
                         </div>
                         <div class="project--card--buttons">
                             <a href="https://dev.to/akshay_rajput/fetch-the-basics-4fdo" 
-                               target="_blank" rel="noreferrer" class="btn--link btn--primary">
+                               target="_blank" rel="noopener noreferrer" class="btn--link btn--primary">
                                 <span class="fa fa-external-link-alt"></span>&nbsp; Read full post
                             </a>
                         </div>
@@ -148,18 +148,18 @@
                 <small class="text--muted">Reach out</small>
                 <ul class="list--inline my--1">
                     <li class="">
-                        <a href="https://github.com/akshay-rajput" class="footer--link" title="My Github Profile">
+                        <a href="https://github.com/akshay-rajput" target="_blank" rel="noopener noreferrer" class="footer--link" title="My Github Profile">
                             <span class="fab fa-github"></span>
                         </a>
                     </li>
                     <li class="mx--1">
-                        <a href="https://www.linkedin.com/in/akshay-rajput/" class="footer--link" title="My LinkedIn Profile">
+                        <a href="https://www.linkedin.com/in/akshay-rajput/" target="_blank" rel="noopener noreferrer" class="footer--link" title="My LinkedIn Profile">
                             <span class="fab fa-linkedin"></span>
                         </a>
                     </li>
                     <li class="">
-                        <a href="https://www.instagram.com/the.frontend.guy/" class="footer--link" title="My Instagram">
-                            <span class="fab fa-instagram"></span>
+                        <a href="https://twitter.com/_AkshayRajput" target="_blank" rel="noopener noreferrer" class="footer--link" title="My Twitter">
+                            <span class="fab fa-twitter"></span>
                         </a>
                     </li>
                 </ul>
